--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Education</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="to_second_page">to second page</string>
     <string name="increase_count">increase count</string>
     <string name="swap_color">swap color</string>
+    <string name="count_0">Count: 0</string>
 </resources>
