--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="to_second_page">to second page</string>
     <string name="increase_count">increase count</string>
     <string name="swap_color">swap color</string>
-    <string name="count_0">Count: 0</string>
+    <string name="count_0">Count: %1$s</string>
     <string name="phone_hint">Phone</string>
     <string name="bio_hint">Bio</string>
     <string name="to_rectangles_btn">to rectangles</string>
